--- a/src/components/Category.module.css
+++ b/src/components/Category.module.css
@@ -5,8 +5,14 @@
   background-color: #2b2d31;
   color: #abb3bd;
   padding: 5px;
-  height: 100vh;
+  width: 15%;
+  height: 99%;
   overflow: hidden;
+}
+
+.birthday_wrap {
+  width: 100%;
+  height: 15%;
 }
 
 .birthday_wrap ul {
@@ -32,6 +38,11 @@
   background-color: #404249;
   color: white;
   border-radius: 5px;
+}
+
+.menu_wrap {
+  position: relative;
+  height: 85%;
 }
 
 .title {
@@ -92,6 +103,12 @@
   background-color: #1e1f22;
   color: white;
   padding: 10px;
+  position: absolute;
+  bottom: 1px;
+  left: -10px;
+  width: 100%;
+  height: 5%;
+  display: flex;
 }
 
 .user .hidden {
@@ -108,4 +125,26 @@
 
 .user .circle {
   background-color: #23a55a;
+}
+
+.text_wrap {
+  margin-left: 10px;
+}
+
+.text_wrap span {
+  font-weight: 700;
+  font-size: 0.8em;
+  display: block;
+  margin-top: 2px;
+}
+
+.text_wrap small {
+  font-size: 0.7em;
+  color: rgb(145, 142, 142);
+  position: relative;
+  top: -3px;
+}
+
+.user > div {
+  position: relative;
 }
