--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -1,3 +1,11 @@
-.Main {
+.main_wrap {
+  display: flex;
+  width: 100%;
+  height: 95%;
+}
+
+.align {
+  width: 100%;
+  height: 93%;
   display: flex;
 }
