--- a/src/components/SubBar.module.css
+++ b/src/components/SubBar.module.css
@@ -1,6 +1,7 @@
 .sub_bar_wrap {
   display: inline-block;
-  width: 100vw;
+  width: 100%;
+  height: 5%;
   padding: 5px;
   background-color: #313338;
   display: flex;
@@ -11,15 +12,21 @@
 
 .search {
   background-color: #2b2d31;
+  width: 210px;
 }
 
 .search input {
   background-color: #1e1f22;
+  width: 90%;
   border: none;
   border-radius: 5px;
   padding: 8px 13px;
   outline: none;
   color: #8e939e;
+}
+
+.sub_menu_wrap {
+  margin-left: 10px;
 }
 
 .sub_menu_wrap ul {
@@ -45,6 +52,16 @@
   color: #8e939e;
   font-weight: 600;
   transition: 0.3s;
+}
+
+.sub_menu_wrap ul li:first-child::after {
+  content: "";
+  display: inline-block;
+  width: 20px;
+  height: 15px;
+  border-right: solid 1px rgb(95, 95, 95);
+  position: relative;
+  top: 3px;
 }
 
 .sub_menu_wrap ul li:first-child a {
