--- a/src/content/Content.module.css
+++ b/src/content/Content.module.css
@@ -1,5 +1,19 @@
 .Content_wrap {
+  width: 65%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .Content_wrap img {
+  width: 370px;
+  height: 230px;
+}
+
+.Content_wrap p {
+  font-size: 0.8em;
+  color: #44474f;
+  font-weight: 600;
 }
