--- a/src/components/SideTab.module.css
+++ b/src/components/SideTab.module.css
@@ -25,6 +25,20 @@
   line-height: 50px;
   margin-bottom: 20px;
   cursor: pointer;
+  overflow: hidden;
+}
+
+.side_tab ul li img {
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  object-fit: fill;
+  transform: scale(2);
+  transition: 0.3s;
+}
+
+.side_tab ul li img:hover {
+  transform: scale(1.2);
 }
 
 .side_tab ul li:first-child {
