--- a/src/components/Category.module.css
+++ b/src/components/Category.module.css
@@ -5,14 +5,15 @@
   background-color: #2b2d31;
   color: #abb3bd;
   padding: 5px;
-  width: 15%;
-  height: 99%;
+  width: 12%;
+  height: 100%;
   overflow: hidden;
 }
 
 .birthday_wrap {
   width: 100%;
-  height: 15%;
+  height: 10%;
+  white-space: nowrap;
 }
 
 .birthday_wrap ul {
@@ -42,7 +43,7 @@
 
 .menu_wrap {
   position: relative;
-  height: 85%;
+  height: 90%;
 }
 
 .title {
@@ -104,7 +105,7 @@
   color: white;
   padding: 10px;
   position: absolute;
-  bottom: 1px;
+  bottom: 0px;
   left: -10px;
   width: 100%;
   height: 5%;
