--- a/src/components/SideTab.module.css
+++ b/src/components/SideTab.module.css
@@ -16,50 +16,42 @@
 }
 
 .side_tab ul li {
-  text-align: center;
-  display: block;
-  list-style: none;
   width: 50px;
   height: 50px;
-  background-color: #5865f2;
+  border: 1px solid red;
+  text-align: center;
   line-height: 50px;
-  margin-bottom: 20px;
+  list-style: none;
   cursor: pointer;
-  overflow: hidden;
 }
 
-.side_tab ul li img {
-  width: 100%;
-  height: 100%;
-  background-position: center;
-  object-fit: fill;
-  transform: scale(2);
-  transition: 0.3s;
-}
-
-.side_tab ul li img:hover {
-  transform: scale(1.2);
-}
-
-.side_tab ul li:first-child {
+.first {
   border-radius: 20px;
-  font-size: 1.6em;
+  font-size: larger;
+  transition: 0.5s;
 }
 
-.side_tab ul li:first-child::after {
-  content: "";
-  display: block;
-  width: 30px;
-  height: 2px;
-  margin: 8px auto;
-  border-bottom: 1px solid #7c7d80;
-}
-
-.side_tab ul li:not(:first-child) {
+.first:hover {
   border-radius: 50%;
-  width: 60px;
-  height: 60px;
-  background-color: #313338;
+  font-size: x-large;
+}
+
+.circle {
+  border-radius: 50%;
+  margin-top: 20px;
+  transition: 0.5s;
+}
+
+.circle:hover {
+  border-radius: 20px;
+}
+
+.circle img {
+  transition: 0.5s;
+}
+
+.circle:hover img {
+  transform: scale(1.2);
 }
 
 .side_tab ul li:nth-child(6),
