--- a/src/components/SideTab.module.css
+++ b/src/components/SideTab.module.css
@@ -18,7 +18,6 @@
 .side_tab ul li {
   width: 50px;
   height: 50px;
-  border: 1px solid red;
   text-align: center;
   line-height: 50px;
   list-style: none;
@@ -26,9 +25,10 @@
 }
 
 .first {
-  border-radius: 20px;
+  border-radius: 18px;
   font-size: larger;
-  transition: 0.5s;
+  transition: 0.3s;
+  background-color: #5865f2;
 }
 
 .first:hover {
@@ -39,19 +39,8 @@
 .circle {
   border-radius: 50%;
   margin-top: 20px;
-  transition: 0.5s;
-}
-
-.circle:hover {
-  border-radius: 20px;
-}
-
-.circle img {
-  transition: 0.5s;
-}
-
-.circle:hover img {
-  transform: scale(1.2);
+  transition: 0.3s;
+  background-color: #313338;
 }
 
 .side_tab ul li:nth-child(6),
@@ -61,6 +50,19 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.circle:hover {
+  border-radius: 20px;
+  background-color: #23a459;
+}
+
+.circle img {
+  transition: 0.3s;
+}
+
+.circle:hover img {
+  transform: scale(1.2);
 }
 
 .plus_icon {
