--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,23 @@
   width: 100%;
   height: 100%;
 }
+
+.top {
+  width: 100%;
+  height: 96%;
+  display: flex;
+}
+
+.main {
+  display: flex;
+  width: 95%;
+  height: 100%;
+  border-top-left-radius: 20px;
+}
+
+.outlet {
+  display: flex;
+  flex-direction: column;
+  width: 88%;
+  height: 100%;
+}
