--- a/src/components/SubBar.module.css
+++ b/src/components/SubBar.module.css
@@ -2,7 +2,6 @@
   display: inline-block;
   width: 100%;
   height: 5%;
-  padding: 5px;
   background-color: #313338;
   display: flex;
   justify-content: start;
@@ -11,25 +10,7 @@
   border-bottom: 1px solid #1d1f22;
 }
 
-.search {
-  width: 210px;
-}
-
-.search input {
-  background-color: #1e1f22;
-  width: 90%;
-  border: none;
-  border-radius: 5px;
-  padding: 8px 13px;
-  outline: none;
-  color: #8e939e;
-}
-
-.sub_menu_wrap {
-  margin-left: 10px;
-}
-
-.sub_menu_wrap ul {
+.sub_bar_wrap ul {
   display: flex;
   margin: 0;
   padding: 0;
@@ -37,24 +18,24 @@
   margin-left: 15px;
 }
 
-.sub_menu_wrap ul li {
+.sub_bar_wrap ul li {
   list-style: none;
   margin-right: 30px;
   cursor: pointer;
 }
 
-.sub_menu_wrap ul li:hover a {
+.sub_bar_wrap ul li:hover a {
   color: white;
 }
 
-.sub_menu_wrap ul li a {
+.sub_bar_wrap ul li a {
   text-decoration: none;
   color: #8e939e;
   font-weight: 600;
   transition: 0.3s;
 }
 
-.sub_menu_wrap ul li:first-child::after {
+.sub_bar_wrap ul li:first-child::after {
   content: "";
   display: inline-block;
   width: 20px;
@@ -64,26 +45,27 @@
   top: 3px;
 }
 
-.sub_menu_wrap ul li:first-child a {
+.sub_bar_wrap ul li:first-child a {
   margin-right: "3px";
   color: white;
 }
-.sub_menu_wrap ul li:first-child:hover a {
+.sub_bar_wrap ul li:first-child:hover a {
   margin-right: "3px";
   color: #8e939e;
 }
 
-.sub_menu_wrap ul li:nth-child(5) {
+.sub_bar_wrap ul li:nth-child(5) {
   background-color: #248046;
   padding: 5px;
   border-radius: 5px;
   transition: 0.3s;
 }
 
-.sub_menu_wrap ul li:nth-child(5):hover {
+.sub_bar_wrap ul li:nth-child(5):hover {
   background-color: #144927;
 }
 
-.sub_menu_wrap ul li:nth-child(5) a {
-  color: white;
+a {
+  color: rgb(201, 200, 200);
+  text-decoration: none;
 }
