--- a/src/components/Category.module.css
+++ b/src/components/Category.module.css
@@ -7,76 +7,132 @@
   width: 12%;
   height: 100%;
   overflow: hidden;
+  border-top-left-radius: 20px;
+  z-index: 1;
 }
 
-.birthday_wrap {
-  width: 100%;
-  height: 10%;
-  white-space: nowrap;
+.category_wrap::before {
+  content: "";
+  display: block;
+  width: 50px;
+  height: 20px;
+  background-color: #1e1f22;
+  z-index: -1;
+  position: absolute;
 }
 
-.birthday_wrap ul {
-  margin: 0;
-  padding: 0px;
-}
-
-.birthday_wrap ul li {
-  list-style: none;
-  padding: 5px;
-  display: flex;
-  align-items: center;
-  height: 30px;
+.category_wrap li {
   cursor: pointer;
 }
 
-.birthday_wrap ul li p {
-  margin-left: 10px;
-  margin-right: 60px;
+.title {
+  height: 5%;
+  border-top-left-radius: 15px;
+  background-color: #2b2d31;
+  border-bottom: 1px solid #1e1f22;
 }
 
-.birthday_wrap ul li:first-child {
+.title_inner {
+  display: flex;
+  align-items: center;
   color: white;
-  font-weight: 600;
-  font-size: 20px;
-  border: 1px solid red;
-  letter-spacing: 1px;
+  padding: 10px;
 }
 
-.birthday_wrap ul li:first-child img {
-  margin-right: 10px;
-  width: 15px;
+.title_inner img {
+  width: 20px;
+  height: 20px;
+  margin-top: 5px;
+}
+
+.title_inner p {
+  white-space: nowrap;
+  font-size: 20px;
+  margin-left: 10px;
+}
+
+.title_inner span {
+  margin-left: 30px;
+  font-size: 1.3em;
+  margin-top: 8px;
+}
+
+.link_wrap > div,
+.menu_wrap > div {
+  display: flex;
+  align-items: center;
+  padding-bottom: 5px;
+}
+
+.link_wrap > div:hover,
+.menu_wrap > div:hover {
+  display: flex;
+  align-items: center;
+  color: white;
+}
+
+.link_wrap > div p,
+.menu_wrap > div p {
+  font-size: 0.8em;
+  margin-top: 10px;
+  font-weight: 600;
+}
+
+/* .link_wrap ul {
+} */
+
+.link_wrap ul li {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  padding: 10px 10px;
+  border-radius: 10px;
+  transition: 0.2s;
+  overflow: hidden;
+}
+
+.link_wrap ul li:hover,
+.menu_wrap_inner li:hover {
+  background-color: #404249;
+  color: white;
+  transform: scale(1.02);
+  font-weight: 600;
+}
+
+.link_wrap ul li div {
+  margin-right: 20px;
 }
 
 .menu_wrap {
   position: relative;
-  width: 100%;
   height: 90%;
 }
 
-.title {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-size: 0.9em;
-  font-weight: 600;
-  padding: 0px 10px;
+.menu_wrap_inner {
+  padding: 10px;
 }
 
-.menu_wrap ul {
-  margin: 0px;
-  padding: 0px;
-}
-
-.menu_wrap li {
-  list-style: none;
+.menu_wrap_inner li {
   display: flex;
   align-items: center;
   gap: 7px;
-  cursor: pointer;
+  padding: 7px;
+  border-radius: 10px;
+  transition: 0.3s;
 }
 
-.menu_wrap li > div {
+.menu_wrap_inner li > div {
   position: relative;
+}
+
+.menu_wrap_inner li:first-child .circle {
+  background-color: #23a55a;
+}
+
+.menu_wrap_inner li div img {
+  width: 100%;
+  height: 100%;
 }
 
 .hidden {
@@ -96,15 +152,6 @@
   position: absolute;
   top: -5px;
   left: -3px;
-}
-
-.menu_wrap ul li:first-child .circle {
-  background-color: #23a55a;
-}
-
-.menu_wrap li div img {
-  width: 100%;
-  height: 100%;
 }
 
 .user {
