--- a/src/components/Category.module.css
+++ b/src/components/Category.module.css
@@ -40,21 +40,20 @@
 }
 
 .title_inner img {
-  width: 20px;
-  height: 20px;
-  margin-top: 5px;
+  width: 15px;
+  margin-left: 3px;
 }
 
 .title_inner p {
   white-space: nowrap;
-  font-size: 20px;
-  margin-left: 10px;
+  font-size: 16px;
+  margin-left: 5px;
 }
 
 .title_inner span {
-  margin-left: 30px;
+  margin-left: 70px;
   font-size: 1.3em;
-  margin-top: 8px;
+  margin-top: 4px;
 }
 
 .link_wrap > div,
@@ -66,38 +65,39 @@
 
 .link_wrap > div:hover,
 .menu_wrap > div:hover {
-  display: flex;
   align-items: center;
   color: white;
 }
 
 .link_wrap > div p,
 .menu_wrap > div p {
-  font-size: 0.8em;
+  font-family: "ABeeZee", sans-serif;
+  font-size: 0.5em;
   margin-top: 10px;
-  font-weight: 600;
 }
 
-/* .link_wrap ul {
-} */
+.link_wrap ul {
+  width: 95%;
+  margin: auto;
+}
 
 .link_wrap ul li {
   list-style: none;
   display: flex;
   align-items: center;
-  font-size: 18px;
-  padding: 10px 10px;
   border-radius: 10px;
   transition: 0.2s;
-  overflow: hidden;
+  padding: 5px;
 }
 
-.link_wrap ul li:hover,
-.menu_wrap_inner li:hover {
+.menu_wrap_inner {
+  padding: 0px;
+}
+
+.link_wrap ul > li:hover,
+.menu_wrap_inner > li:hover {
   background-color: #404249;
   color: white;
-  transform: scale(1.02);
-  font-weight: 600;
 }
 
 .link_wrap ul li div {
@@ -109,8 +109,9 @@
   height: 90%;
 }
 
-.menu_wrap_inner {
-  padding: 10px;
+.menu_wrap ul {
+  width: 95%;
+  margin: auto;
 }
 
 .menu_wrap_inner li {
@@ -120,6 +121,12 @@
   padding: 7px;
   border-radius: 10px;
   transition: 0.3s;
+  margin-bottom: 10px;
+}
+
+.hidden {
+  width: 30px;
+  height: 30px;
 }
 
 .menu_wrap_inner li > div {
@@ -135,17 +142,10 @@
   height: 100%;
 }
 
-.hidden {
-  overflow: hidden;
-  height: 35px;
-  width: 35px;
-  border-radius: 50%;
-}
-
 .circle {
   display: block;
-  width: 10px;
-  height: 10px;
+  width: 8px;
+  height: 8px;
   border-radius: 50%;
   background-color: #757982;
   border: 4px solid #2b2d31;
