--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=ABeeZee&family=Kanit:wght@100;200;300;400;500;600;700;800;900&family=Khand:wght@300;400;500;600;700&display=swap");
 
+/* font-family: "Kanit", sans-serif; */
+/* font-family: 'Khand', sans-serif */
+
 .wrap {
   background-color: #313338;
   width: 100%;
