--- a/src/components/Category.module.css
+++ b/src/components/Category.module.css
@@ -37,6 +37,8 @@
   align-items: center;
   color: white;
   padding: 10px;
+  font-size: 1.2em;
+  /* transform: translateY(8px); */
 }
 
 .title_inner img {
@@ -46,14 +48,17 @@
 
 .title_inner p {
   white-space: nowrap;
-  font-size: 16px;
   margin-left: 5px;
 }
 
 .title_inner span {
-  margin-left: 70px;
+  margin-left: 55px;
   font-size: 1.3em;
   margin-top: 4px;
+}
+
+.link_wrap {
+  height: 8%;
 }
 
 .link_wrap > div,
@@ -63,8 +68,8 @@
   padding-bottom: 5px;
 }
 
-.link_wrap > div:hover,
-.menu_wrap > div:hover {
+.link_wrap > div li:hover,
+.menu_wrap > div li:hover {
   align-items: center;
   color: white;
 }
@@ -106,7 +111,7 @@
 
 .menu_wrap {
   position: relative;
-  height: 90%;
+  height: 87%;
 }
 
 .menu_wrap ul {
@@ -122,11 +127,6 @@
   border-radius: 10px;
   transition: 0.3s;
   margin-bottom: 10px;
-}
-
-.hidden {
-  width: 30px;
-  height: 30px;
 }
 
 .menu_wrap_inner li > div {
@@ -157,29 +157,44 @@
 .user {
   background-color: #1e1f22;
   color: white;
-  padding: 10px;
   position: absolute;
   bottom: 0px;
-  left: -10px;
-  width: 100%;
-  height: 5%;
+  left: 0px;
+  width: 99%;
+  height: 8%;
+}
+
+.user > div {
+  padding: 5px 10px;
   display: flex;
+  justify-content: center;
+  align-items: end;
+
+  position: relative;
 }
 
 .user .hidden {
   background-color: #faa10e;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  overflow: hidden;
 }
 
 .user p {
-  text-align: center;
   color: white;
-  font-size: 1.2em;
   margin: 0;
-  line-height: 40px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  text-align: center;
 }
 
 .user .circle {
   background-color: #23a55a;
+  position: absolute;
+  top: 3px;
+  left: 5px;
 }
 
 .text_wrap {
@@ -187,19 +202,15 @@
 }
 
 .text_wrap span {
-  font-weight: 700;
+  font-weight: 600;
   font-size: 0.8em;
   display: block;
   margin-top: 2px;
+  letter-spacing: 1px;
 }
 
 .text_wrap small {
   font-size: 0.7em;
   color: rgb(145, 142, 142);
-  position: relative;
-  top: -3px;
-}
-
-.user > div {
-  position: relative;
+  transform: translateY(3px);
 }
