--- a/src/components/SubBar.module.css
+++ b/src/components/SubBar.module.css
@@ -1,12 +1,11 @@
 .sub_bar_wrap {
   display: inline-block;
   width: 100%;
-  height: 5%;
+  height: 5.2%;
   background-color: #313338;
   display: flex;
   justify-content: start;
   align-items: center;
-  font-family: "whitney-semibold";
   border-bottom: 1px solid #1d1f22;
 }
 
@@ -15,57 +14,36 @@
   margin: 0;
   padding: 0;
   align-items: center;
-  margin-left: 15px;
+  margin-left: 30px;
 }
 
 .sub_bar_wrap ul li {
   list-style: none;
-  margin-right: 30px;
+  margin-right: 20px;
   cursor: pointer;
-}
-
-.sub_bar_wrap ul li:hover a {
-  color: white;
-}
-
-.sub_bar_wrap ul li a {
   text-decoration: none;
-  color: #8e939e;
-  font-weight: 600;
+  font-weight: 400;
   transition: 0.3s;
-}
-
-.sub_bar_wrap ul li:first-child::after {
-  content: "";
-  display: inline-block;
-  width: 20px;
-  height: 15px;
-  border-right: solid 1px rgb(95, 95, 95);
-  position: relative;
-  top: 3px;
-}
-
-.sub_bar_wrap ul li:first-child a {
-  margin-right: "3px";
   color: white;
-}
-.sub_bar_wrap ul li:first-child:hover a {
-  margin-right: "3px";
-  color: #8e939e;
+  padding: 8px 20px;
+  border-radius: 10px;
 }
 
-.sub_bar_wrap ul li:nth-child(5) {
+.sub_bar_wrap ul li:hover:not(.green) {
+  background-color: #404249;
+}
+
+.green {
+  background-color: #248046;
+}
+
+.sub_bar_wrap ul a {
+  text-decoration: none;
+}
+
+/* .sub_bar_wrap ul li:nth-child(5) {
   background-color: #248046;
   padding: 5px;
   border-radius: 5px;
   transition: 0.3s;
-}
-
-.sub_bar_wrap ul li:nth-child(5):hover {
-  background-color: #144927;
-}
-
-a {
-  color: rgb(201, 200, 200);
-  text-decoration: none;
-}
+} */
