--- a/src/pages/Skills.module.css
+++ b/src/pages/Skills.module.css
@@ -6,12 +6,10 @@ font-family: 'Roboto', sans-serif; */
 
 .skills_wrap {
   color: white;
-  border: 1px solid red;
   overflow-y: scroll;
 }
 
 .skills_inner {
-  border: 1px solid blue;
   text-align: center;
   font-family: "Noto Sans KR", sans-serif;
 }
@@ -19,27 +17,64 @@ font-family: 'Roboto', sans-serif; */
 .skills_inner > h2 {
   font-size: 4em;
   color: #5865f2;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   font-weight: 600;
 }
 
 .inner_wrap {
-  border: 1px solid white;
   display: inline-block;
   text-align: start;
 }
 
+.inner_wrap > div {
+  margin-top: 20px;
+  margin-top: 60px;
+}
+
+.inner_wrap > div h2 {
+  font-size: 1.6em;
+  font-weight: 600;
+  padding: 5px 0px;
+  background: -webkit-linear-gradient(#ffffff, #797b7c);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 .inner_wrap ul {
   display: flex;
+  margin-top: 20px;
 }
 
 .inner_wrap ul div {
   width: 100px;
   height: 100px;
-  border: 1px solid blue;
+  margin-right: 40px;
+  transition: 0.3s;
+  cursor: pointer;
+  animation: translateY 1s;
+}
+
+.inner_wrap ul div:hover {
+  transform: scale(1.1) translateY(10px);
+}
+
+.inner_wrap ul div:last-child {
+  margin-right: 0px;
 }
 
 .inner_wrap img {
   width: 100%;
-  ob
+  height: 100%;
+  object-fit: contain;
+}
+
+@keyframes translateY {
+  from {
+    transform: translateY(-10px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
