--- a/src/pages/Skills.module.css
+++ b/src/pages/Skills.module.css
@@ -1,9 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Archivo+Black&family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400&display=swap");
 
-/* font-family: 'Archivo Black', sans-serif;
-font-family: 'Noto Sans KR', sans-serif;
-font-family: 'Roboto', sans-serif; */
-
 .skills_wrap {
   color: white;
   overflow-y: scroll;
@@ -77,4 +73,10 @@ font-family: 'Roboto', sans-serif; */
     transform: translateY(0);
     opacity: 1;
   }
+}
+
+/*다크 모드*/
+
+.dark {
+  background-color: #2d354a;
 }
