--- a/src/components/Category.module.css
+++ b/src/components/Category.module.css
@@ -68,12 +68,6 @@
   padding-bottom: 5px;
 }
 
-.link_wrap > div li:hover,
-.menu_wrap > div li:hover {
-  align-items: center;
-  color: white;
-}
-
 .link_wrap > div p,
 .menu_wrap > div p {
   font-family: "ABeeZee", sans-serif;
@@ -137,6 +131,11 @@
   background-color: #23a55a;
 }
 
+.link_wrap ul > li:hover .circle,
+.menu_wrap_inner > li:hover .circle {
+  border: 4px solid #404249;
+}
+
 .menu_wrap_inner li div img {
   width: 100%;
   height: 100%;
@@ -159,8 +158,8 @@
   color: white;
   position: absolute;
   bottom: 0px;
-  left: 0px;
-  width: 99%;
+  left: -3px;
+  width: 101%;
   height: 8%;
 }
 
@@ -169,7 +168,6 @@
   display: flex;
   justify-content: center;
   align-items: end;
-
   position: relative;
 }
 
@@ -213,4 +211,39 @@
   font-size: 0.7em;
   color: rgb(145, 142, 142);
   transform: translateY(3px);
+}
+
+/*다크모드*/
+
+.dark {
+  background-color: #18253d;
+}
+
+.dark .link_wrap ul > li:hover,
+.dark .menu_wrap_inner > li:hover {
+  background-color: #4f576b;
+  color: white;
+}
+
+.dark .link_wrap ul > li:hover .circle,
+.dark .menu_wrap_inner > li:hover .circle {
+  border: 4px solid #4f576b;
+}
+
+.dark .circle {
+  background-color: gray;
+  border: 4px solid #18253d;
+}
+
+.dark .user {
+  background-color: #131926;
+}
+
+.dark .title {
+  background-color: #18253d;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.dark::before {
+  background-color: #131926;
 }
