--- a/src/components/SubBar.module.css
+++ b/src/components/SubBar.module.css
@@ -37,13 +37,21 @@
   background-color: #248046;
 }
 
+.green:hover {
+  filter: brightness(120%);
+}
+
 .sub_bar_wrap ul a {
   text-decoration: none;
 }
 
-/* .sub_bar_wrap ul li:nth-child(5) {
-  background-color: #248046;
-  padding: 5px;
-  border-radius: 5px;
-  transition: 0.3s;
-} */
+/*다크 모드*/
+
+.dark {
+  background-color: #2d354a;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.dark ul li:hover:not(.green) {
+  background-color: #4f576b;
+}
