--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Archivo+Black&family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400&display=swap");
+.about_wrap {
+  height: 100%;
+}
 
 .about_inner {
   color: white;
@@ -67,4 +70,13 @@
 .ment p {
   font-weight: 100;
   margin-top: 20px;
+}
+
+/*다크 모드*/
+.dark {
+  background-color: #2d354a;
+}
+
+.dark .img {
+  border: 1.5px solid rgba(255, 255, 255, 0.4);
 }
