--- a/src/pages/Setting.module.css
+++ b/src/pages/Setting.module.css
@@ -1,15 +1,79 @@
-.setting_wrap{
-    border: 1px solid red;}
+@import url("https://fonts.googleapis.com/css2?family=Archivo+Black&family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400&display=swap");
 
-.setting_inner{
-    border: 1px solid blue;
+.setting_wrap {
+  font-family: "Noto Sans KR", sans-serif;
+  height: 100%;
 }
 
-.light_wrap{
-    border: 1px solid white;
+.setting_inner {
 }
 
-.dark_wrap{
-    border: 1px solid white;
- 
+.setting_inner h2 {
+  text-align: center;
+  color: rgb(230, 230, 230);
+  font-weight: 600;
+  font-size: 3em;
+  -webkit-text-stroke: 2px #75757c;
+}
+
+.setting_inner > div {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+  gap: 50px;
+}
+
+.basic_mode,
+.dark_mode {
+  text-align: center;
+}
+
+.img_wrap {
+  width: 40em;
+  height: 25em;
+  border: 1px solid red;
+  margin-bottom: 50px;
+  transition: 0.5s;
+}
+
+.img_wrap:hover {
+  transform: translateY(10px) scale(1.2);
+}
+
+.basic_mode button,
+.dark_mode button {
+  border: none;
+  font-size: 2em;
+  padding: 10px 40px;
+  color: white;
+  cursor: pointer;
+}
+
+.basic_mode button:active,
+.dark_mode button:active {
+  filter: brightness(120%);
+}
+
+.basic_mode button {
+  background-color: #5865f2;
+  border: 5px solid white;
+}
+
+.dark_mode button {
+  background-color: #1e1f22;
+}
+
+/*다크 모드*/
+
+.dark {
+  background-color: #2d354a;
+}
+
+.dark h2 {
+  color: white;
+  -webkit-text-stroke: 2px #9191a7;
+}
+
+.dark .basic_mode button {
+  background-color: #23a459;
 }
