--- a/src/pages/contact.module.css
+++ b/src/pages/contact.module.css
@@ -1,12 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Archivo+Black&family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400&display=swap");
 
-/* font-family: 'Archivo Black', sans-serif;
-font-family: 'Noto Sans KR', sans-serif;
-font-family: 'Roboto', sans-serif; */
-
 .contact_wrap {
   color: white;
   font-family: "Noto Sans KR", sans-serif;
+  height: 100%;
 }
 
 .contact_inner {
@@ -25,49 +22,70 @@ font-family: 'Roboto', sans-serif; */
   text-align: center;
   font-size: 3em;
   margin-bottom: 100px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
 }
 
 .img_wrap {
   width: 400px;
   height: 400px;
   border: 1px solid white;
-  border-radius: 50%;
+  animation: imgcircle 1s forwards;
+}
+
+@keyframes imgcircle {
+  from {
+    border-radius: 30px;
+  }
+  to {
+    border-radius: 50%;
+  }
 }
 
 .text_wrap {
   display: inline-block;
-  margin-left: 20px;
+  margin-left: 30px;
   text-align: start;
-  transform: translateY(30%);
+  transform: translateY(10%);
 }
 
 .text_wrap h2 {
-  color: #5865f2;
-  font-size: 2em;
+  color: rgb(88, 101, 242);
+  font-size: 2.5em;
   font-weight: 600;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
 }
 
 .text_wrap p {
   font-size: 1.2em;
   font-weight: 500;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
+  color: #c9c8c8;
 }
-/* .text_wrap span {
-  background-color: white;
-  display: block;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  text-align: center;
+
+.text_wrap ul li {
+  margin-bottom: 20px;
+  transition: 0.3s;
+}
+
+.text_wrap ul li:hover {
+  color: #faa10e;
+  transform: scaleY(1.02) translateY(-3px);
+}
+
+.text_wrap span {
+  display: inline-block;
+  margin-right: 7px;
 }
 
 .text_wrap span img {
-  width: 15px;
-  height: 15px;
+  width: 18px;
+  height: 18px;
   padding-top: 2.5px;
-} */
+}
 
-.text_wrap li {
-  margin-bottom: 10px;
+/*다크 모드*/
+
+.dark {
+  background-color: #2d354a;
 }
