--- a/src/components/SideTab.module.css
+++ b/src/components/SideTab.module.css
@@ -30,17 +30,17 @@
   transition: 0.2s;
 }
 
-.side_tab li > div:not(.firstCircle) {
+.side_tab li > div:not(.home) {
   border-radius: 50%;
 }
 
-.firstCircle {
+/* .firstCircle > li div {
   border-radius: 20px;
 }
 
 .firstCircle:hover {
   border-radius: 50%;
-}
+} */
 
 .side_tab li img {
   width: 30px;
@@ -108,6 +108,10 @@
 .icon:hover {
   background-color: #23a459;
   color: #fff;
+}
+
+.fixedStyle {
+  border: 1px solid red;
 }
 
 /*다크모드*/
