--- a/src/components/SubBar.module.css
+++ b/src/components/SubBar.module.css
@@ -23,7 +23,7 @@
   cursor: pointer;
   text-decoration: none;
   font-weight: 400;
-  transition: 0.3s;
+  transition: 0.2s;
   color: white;
   padding: 8px 20px;
   border-radius: 10px;
@@ -55,3 +55,7 @@
 .dark ul li:hover:not(.green) {
   background-color: #4f576b;
 }
+
+/* .dark .green {
+  background-color: rgb(72, 79, 160);
+} */
