--- a/src/components/SubBar.module.css
+++ b/src/components/SubBar.module.css
@@ -1,18 +1,20 @@
 .sub_bar_wrap {
   display: inline-block;
   width: 100%;
-  height: 5.2%;
+  height: 5%;
   background-color: #313338;
   display: flex;
   justify-content: start;
   align-items: center;
   border-bottom: 1px solid #1d1f22;
+  font-size: 1.2em;
+  position: relative;
 }
 
 .sub_bar_wrap ul {
   display: flex;
   margin: 0;
-  padding: 0;
+  padding: 10px;
   align-items: center;
   margin-left: 30px;
 }
@@ -25,7 +27,7 @@
   font-weight: 400;
   transition: 0.2s;
   color: white;
-  padding: 8px 20px;
+  padding: 8px 13px;
   border-radius: 10px;
 }
 
@@ -33,8 +35,25 @@
   backdrop-filter: brightness(160%);
 }
 
-.sub_bar_wrap ul a {
-  text-decoration: none;
+.sub_bar_wrap ul .setting p,
+.sub_bar_wrap ul div h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20px;
+  height: 20px;
+  backdrop-filter: brightness(160%);
+  color: white;
+  position: absolute;
+  top: calc(50% - 13px);
+  right: 20px;
+  padding: 3px;
+  border-radius: 50%;
+}
+
+.sub_bar_wrap ul div h1 {
+  background-color: #313338;
+  color: rgb(182, 178, 178);
 }
 
 /*다크 모드*/
@@ -48,15 +67,7 @@
   backdrop-filter: brightness(160%);
 }
 
-/* .dark .green {
-  background-color: rgb(72, 79, 160);
-} */
-
 /*클릭*/
-
-.sub_bar_wrap ul .green {
-  background-color: #248046;
-}
 
 .sub_bar_wrap ul .clickStyle {
   backdrop-filter: brightness(160%);
