--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -30,14 +30,15 @@
   transform: translate(5px, 7px);
 }
 
-.sub_title {
+/* .sub_title {
   display: block;
-  color: rgba(35, 164, 89, 0.5);
+   color: #5865f2; 
+  color: white;
   font-weight: 200;
   transform: translateY(-10px);
   font-size: 1.5em;
   animation: smooth 1.5s forwards;
-}
+} */
 
 @keyframes smooth {
   from {
