--- a/src/pages/Project.module.css
+++ b/src/pages/Project.module.css
@@ -8,90 +8,158 @@
 
 .project_inner {
   text-align: center;
+}
+
+/*스크롤 style*/
+
+.project_wrap::-webkit-scrollbar {
+  width: 0.6em;
+  background-color: #313338;
+}
+.project_wrap::-webkit-scrollbar-thumb {
+  background-color: #18191b;
+  border-radius: 10px;
+}
+
+.project_wrap::-webkit-scrollbar-track {
+  background-color: #404246;
+}
+
+.project_inner {
   font-family: "Noto Sans KR", sans-serif;
-  padding: 20px;
 }
 
 .project_inner h2 {
   color: white;
   font-size: 4em;
   font-weight: 600;
-  color: aquamarine;
+  color: rgb(187, 187, 187);
 }
 
 .project_content {
   display: flex;
-  justify-content: center;
-  gap: 50px;
+  justify-content: space-between;
+  padding: 40px;
+  gap: 20px;
   flex-wrap: wrap;
   margin-top: 40px;
+  text-align: start;
 }
 
 /*item style*/
 
 .item_wrap {
-  width: 45%;
+  margin-bottom: 20px;
+  width: 28%;
   position: relative;
-  border-top-right-radius: 30px;
-  border-bottom-right-radius: 30px;
-  backdrop-filter: brightness(0.8);
-  padding: 10px;
-}
-
-.item_wrap > span {
-  position: absolute;
-  display: inline-block;
-  height: 100%;
-  width: 0.7%;
-  position: absolute;
-  left: 0px;
-  top: 0;
-}
-
-.item_inner {
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: start;
-  padding: 20px;
-}
-
-.img_wrap {
-  height: 400px;
-  overflow: hidden;
   border-radius: 30px;
+  backdrop-filter: brightness(0.8);
+  padding: 20px;
+  overflow: hidden;
+  background: url("/public/img/backgrpund_img.webp") no-repeat;
 }
 
-.img_wrap img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+/*label*/
+.label {
+  display: inline-block;
+  transform: rotate(270deg);
+  font-size: 70px;
+  position: absolute;
+  top: -30px;
+  right: 10px;
 }
 
-.item_wrap h1 {
-  color: white;
-  margin: 20px 0px;
+.item_inner > div:first-child {
+  margin-top: 15px;
+}
+
+.item_inner > div:first-child h1 {
+  margin-bottom: 20px;
   font-size: 2em;
+}
+
+.item_inner > div:first-child .img_wrap {
+  width: 100%;
+  height: auto;
+}
+
+.item_inner > div:first-child .img_wrap img {
+  width: 100%;
+  height: auto;
 }
 
 .text_wrap {
   text-align: start;
   color: #c9c8c8;
-  font-size: 1.2em;
+  font-size: 1.15em;
   line-height: 1.2em;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #18191b;
+  margin-top: 20px;
 }
 
+/*키워드 랩*/
 .keyowrd_wrap {
   display: flex;
   gap: 20px;
+  margin-bottom: 50px;
+  margin-top: 15px;
 }
 
-/*언어 버튼 만들기*/
 .keyowrd_wrap div {
-  border: 1px solid red;
+  padding: 5px 8px;
+  border-radius: 20px;
+  font-weight: 400;
+  display: flex;
 }
 
+.keyowrd_wrap div span {
+  margin-right: 5px;
+  font-size: 1.2em;
+}
+
+.link_wrap {
+  display: flex;
+  color: white;
+  position: absolute;
+  bottom: 10px;
+  right: 30px;
+}
+
+.link_wrap div {
+  position: relative;
+  margin-left: 10px;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.link_wrap div span {
+  font-size: 2em;
+  color: #c9c8c8;
+  transition: 0.2s;
+}
+
+.link_wrap div p {
+  position: absolute;
+  white-space: nowrap;
+  top: calc(50% - 0.5em);
+  left: calc(50% - 25px);
+  font-weight: 500;
+  display: none;
+}
+
+.link_wrap div:first-child p {
+  transform: translateX(3px);
+}
+
+.link_wrap div:hover span {
+  color: rgba(255, 255, 255, 0.2);
+}
+
+.link_wrap div:hover p {
+  display: block;
+}
 /*다크모드*/
 
 .dark {
