--- a/src/pages/Setting.module.css
+++ b/src/pages/Setting.module.css
@@ -1,8 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Archivo+Black&family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400&display=swap");
 
 .setting_wrap {
-  font-family: "Noto Sans KR", sans-serif;
   height: 100%;
+}
+
+.setting_inner{
+  font-family: "Noto Sans KR", sans-serif;
 }
 
 .setting_inner h2 {
